--- a/Controller1/usr/usrapp/MoveId/MoveId.dtx
+++ b/Controller1/usr/usrapp/MoveId/MoveId.dtx
@@ -2,5 +2,10 @@
 <Database xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.staubli.com/robotics/VAL3/Data/2">
   <Datas>
     <Data name="mNomSpeed" access="private" xsi:type="array" type="mdesc" size="1" />
+    <Data name="jJ" access="private" xsi:type="array" type="jointRx" size="1" />
+    <Data name="mMdesc" access="private" xsi:type="array" type="mdesc" size="1" />
+    <Data name="tTool" access="private" xsi:type="array" type="tool" size="1">
+      <Value key="0" fatherId="flange[0]" ioLink="valve1" />
+    </Data>
   </Datas>
 </Database>
